--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
-   <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
-    <h1>steven universe blog </h1>
+    <h1>Steven universe blog </h1>
     
   </body>
 </html>
