--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   </head>
   <body>
     <h1>Steven universe blog </h1>
+    <h2>Benifits of changing the envioment</h2>
+    
     
   </body>
 </html>
